# stock-agent-007

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  extensions_config.json  install.bat  install.sh  pyproject.toml  start.bat  start.sh
backend/: __init__.py  app.py  bootstrap.py  execution_guard.py  schemas.py
doc/: AI_CHAT_ARCHITECTURE.md  AI_CHAT_BUBBLE.md  AI_CHAT_SDK_INTEGRATION.md  AI_CHAT_SESSION.md  ARCHITECTURE_ANALYSIS.md  BACKTEST_STANDARDS.md  CHAT_BUBBLE_REDESIGN.md  CLIENT_SDK_ARCHITECTURE.md  DEERFLOW_FEATURE_PLAN.md  DEERFLOW_IM_CHANNELS.md  DEERFLOW_UPGRADE_IMPACT.md  GAP_ANALYSIS.md  IM_ADAPTER_MVP_DESIGN.md  MULTI_AGENT_CHAT.md  README.md  SKILL_DEERFLOW_NATIVE.md  SKILL_ROADMAP.md  SKILL_SYSTEM.md  STACK_DECISIONS.md  TOOL_DEEP_BINDING.md  TOOL_DEEP_BINDING_IMPL.md  TOOL_IN_DEERFLOW.md  TOOL_MCP_NATIVE_PLAN.md  ai_effectiveness_governance.md  ai_runtime_settings_design.md  ai_stock_workbench_feasibility.md  ai_stock_workbench_north_star.md  daily_stock_analysis_migration.md  data_cache_strategy.md  deerflow-conversation-mechanism.md  frontend_interaction_design.md  hk_us_provider_quality.md  menu_information_architecture.md  production_readiness_assessment.md  runnable_web_demo_plan.md  service_architecture.md  system_capability_map.md  three_layer_context_management.md
docs/: ADD_DATA_SOURCE.md  IM_CHANNEL_INTEGRATION.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
scripts/: ai_regression_smoke.py  backfill_data.py  (+7 more)
(+186 files in other folders)
